--- a/JENKINS/Jenkinsfile
+++ b/JENKINS/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
     stage('Cloning Git') {
       steps {
         git(
-          url: "https://github.com/anuragsontakke07/Automating-CI-CD-with-Jenkins-pipeline.git",
+          url: "git@github.com:anuragsontakke07/finalprojects.git",
           branch: "main"
         )
       }
